REGRESSION(r107836): box shadow not drawn for opaque images with an opaque background https://bugs.webkit.org/show_bug.cgi?id=89958

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2012-06-26
Reviewed by Simon Fraser.

Source/WebCore:

Don't attempt to draw the box shadow as part of the background if the background is
obscured.

Test: fast/box-shadow/image-box-shadow.html

* rendering/RenderImage.cpp:
(WebCore::RenderImage::boxShadowShouldBeAppliedToBackground):
(WebCore):
* rendering/RenderImage.h:
(RenderImage):

LayoutTests:

* fast/box-shadow/image-box-shadow-expected.html: Added.
* fast/box-shadow/image-box-shadow.html: Added.
* fast/box-shadow/resources/green-alpha.png: Added.
* fast/box-shadow/resources/green.jpg: Added.
* fast/box-shadow/resources/green.png: Added.

Canonical link: https://commits.webkit.org/107883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121314 268f45cc-cd09-0410-ab3c-d52691b4dbfc